[package]
name = "mqtt-client"
version = "0.2.0"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
description = "mqtt-client - A CLI MQTT Client"
repository = "https://github.com/ming900518/mqtt-client"
keywords = ["cli", "mqtt"]
categories = ["gui"]
license = "MIT"

[dependencies]
paho-mqtt = { version = "0.12.1", default-features = false, features = [
    "bundled",
] }
tokio = { version = "1.29.1", features = ["full"] }
futures-util = "0.3.28"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
mimalloc = "0.1.37"
relm4 = { version = "0.6.0", features = ["libadwaita", "macros"] }
relm4-components = "0.6.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
