[package]
name = "mqtt-client"
version = "0.3.0"
edition = "2021"
authors = ["Ming Chang <mail@mingchang.tw>"]
description = "A MQTT Client with GTK4 GUI support."
repository = "https://github.com/ming900518/mqtt-client"
keywords = ["cli", "mqtt"]
categories = ["gui"]
license = "MIT"

[dependencies]
paho-mqtt = { version = "0.12.1", default-features = false, features = [
    "bundled",
] }
tokio = { version = "*", features = ["full"] }
futures-util = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
mimalloc = "*"
leptos = { version = "*", features = ["csr"] }
gtk4 = { version = "*", features = ["v4_10"] }
libadwaita = { version = "*", features = ["v1_3"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.bundle]
name = "MQTT Client"
identifier = "tw.mingchang.mqtt-client"
version = "0.3.0"
category = "Developer Tool"
short_description = "A MQTT Client with GTK4 GUI support."
long_description = """
A MQTT Client with GTK4 GUI support.
"""
osx_url_schemes = ["mqtt-client"]
